# promptbuilder

./: .eslintrc.cjs  .gitattributes  .gitignore  2new_wizardlm_electron_fix_feedback_gpt5.txt  3new_wizardlm_electron_fix_feedback_gpt5.txt  App.tsx  App_backup.tsx  LICENSE  README.md  __init__.py  anime_styles_workflow.json  batch_workflow.json  complete_workflow.json  constants.ts  example_workflow.json  index.html  intelligent_batch_workflow.json  main.js  metadata.json  new_wizardlm_electron_fix_feedback_gpt5.txt  package-lock.json  package.json  playwright.config.ts  preload.js  promptbuilder_node.py  pyproject.toml  simple_workflow.json  test_nsfw.py  test_workflow.json  tsconfig.json  types.ts  ultimate_workflow.json  vite.config.ts  wizardlm_electron_fix_feedback_gpt5.txt  wizardlm_random_contextsequence_fix.txt  wizardlm_random_diversity_sentinel_fix.txt
assets/: index-DS9DNZAX.js  index-RqWiGdeg.js
comfyui_promptbuilder_node.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
components/: AdvancedSettings.tsx  ApiSettings.tsx  CharacterControls.tsx  CharacterStylePresets.tsx  ClothingPresets.tsx  CompactToggle.tsx  EmotionalStatesPresets.tsx  HairPresets.tsx  Header.tsx  History.tsx  ImageGenerator.tsx  InfoTooltip.tsx  Instructions.tsx  LoadingScreen.tsx  LocationPresets.tsx  Logo.tsx  LogoAnimation.tsx  ModelTuning.tsx  NSFWPropsPresets.tsx  NsfwControls.tsx  PhysicalFeaturesPresets.tsx  PosePresets.tsx  PresetCategory.tsx  PromptInput.tsx  PromptOutput.tsx  PromptSnippets.tsx  PropsPresets.tsx  RoleplayPresets.tsx  SaveSnippetModal.tsx  SettingsManager.tsx  ShotPresets.tsx  Slider.tsx  (+6 more)
(+82 files in other folders)
