[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-promptbuilder-node"
version = "1.0.0"
description = "ComfyUI node for Prompt Builder with local LLM integration"
authors = [{name = "Prompt Builder Team", email = "contact@promptbuilder.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["comfyui", "ai", "prompt", "llm", "image-generation"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/btitkin/promptbuilder"
Repository = "https://github.com/btitkin/promptbuilder.git"
Issues = "https://github.com/btitkin/promptbuilder/issues"
Documentation = "https://github.com/btitkin/promptbuilder/wiki"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["src"] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)